@@ -1,6 +1,7 @@
 dgm-lib v1.x.x
  * Added documentation for `dgm::JsonLoader`
  * Changed `dgm::LoaderInterface` to require `std::filesystem::path` instead of `std::string`
+ * Added type `dgm::ErrorMessage` which is an alias for returning `std::string` error messages wrapped in `std::expected`
 
 dgm-lib v1.10.0
  * `dgm::ResourceManager` can now load `dgm::Clip` from JSON files
